Java 11 upgrade + SonarCloud (#37)